tests/fixtures/errors/duplicate_match_arm.gcl
// Error: duplicate match arm
pub type Nominal {}
pub type Warning {
    code: Dimensionless,
}
pub type Status = Nominal | Warning;

param s: Status = Nominal { };

node result: Dimensionless = match @s {
    Nominal => 0.0,
    Nominal => 1.0,
    Warning { code } => code,
};
